Update array APIs for filtering by unique id and storage type (#23)
